# tearchan

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: Cargo.toml  README.md  build.rs  launch.rs  texture_bundle.rs
examples/app/: billboard_scene.rs  grid_scene.rs  hello_world_scene.rs  mod.rs  obj_scene.rs  sprite_scene.rs  sprite_window_scene.rs  square_scene.rs  text_scene.rs  texture_bundle.rs
examples/assets/fonts/: LICENSE.txt
examples/batch/: main.rs
examples/batch_v2/: main.rs
examples/billboard/: billboard_scene.rs  main.rs  skeleton_billboard.rs
examples/cube/: cube.rs  cube_scene.rs  main.rs
examples/data/sprites/: skeleton.json
examples/file/: main.rs
examples/font/: main.rs
examples/horde/: horde_provider.rs  horde_scene.rs  main.rs  person_object.rs  person_object_store.rs
examples/line/: line.rs  line_scene.rs  main.rs
examples/physics_3d/: cube_object.rs  ground_object.rs  main.rs  physics_3d_scene.rs
examples/quad/: main.rs  quad_scene.rs
examples/shaders/: batch.frag  batch.vert
examples/sprite/: main.rs  skeleton_sprite.rs  sprite_scene.rs
examples/text/: main.rs  text_object.rs  text_scene.rs
examples/ui/: main.rs  ui_scene.rs
tearchan-core/: Cargo.toml
tearchan-core/src/: lib.rs  sync.rs
tearchan-core/src/io/: file.rs  mod.rs  net.rs
tearchan-core/src/io/file/: android.rs  mod.rs  objc.rs
tearchan-core/src/io/net/: mod.rs  web.rs
tearchan-core/src/thread/: mod.rs  web.rs
tearchan-examples/: Cargo.toml  README.md
tearchan-examples/assets/: b.txt
tearchan-examples/batch2d/: batch.wgsl  main.rs
tearchan-examples/batch3d/: main.rs
tearchan-examples/batch_billboard/: main.rs
tearchan-examples/batch_line/: main.rs
tearchan-examples/batch_v2/: main.rs
tearchan-examples/empty/: main.rs
tearchan-examples/file/: main.rs
tearchan-examples/font/: main.rs
tearchan-examples/horde/: game.rs  main.rs  renderer.rs  utils.rs
tearchan-gfx/: Cargo.toml  build.rs  bulid.rs
tearchan-gfx/shaders/: billboard.wgsl  standard_2d.frag  standard_2d.wgsl  standard_3d.wgsl  standard_line.wgsl
tearchan-gfx/src/: bitmap.rs  buffer.rs  camera.rs  context.rs  font_texture.rs  image.rs  lib.rs  primitive.rs  registry.rs  renderer.rs  setup.rs  shader.rs  texture.rs  types.rs  uniform_buffer.rs  utils.rs
tearchan-gfx/src/batch/: batch2d.rs  batch3d.rs  batch_billboard.rs  batch_line.rs  buffer.rs  context.rs  mod.rs  object.rs  object_manager.rs  provider.rs  types.rs
tearchan-gfx/src/batch/snapshots/: tearchan_gfx__batch__buffer__test__allocate.snap  tearchan_gfx__batch__buffer__test__defragmentation.snap  tearchan_gfx__batch__buffer__test__events-2.snap  tearchan_gfx__batch__buffer__test__events-4.snap  tearchan_gfx__batch__buffer__test__sort-2.snap  tearchan_gfx__batch__buffer__test__sort.snap  tearchan_gfx__batch__object_manager__test__sort_by_order.snap
tearchan-gfx/src/batch/v2/: batch2d.rs  batch3d.rs  batch_billboard.rs  batch_line.rs  buffer.rs  context.rs  mod.rs  object.rs  object_manager.rs  provider.rs
tearchan-gfx/src/hal/: backend.rs  global.rs  mod.rs  surface.rs  swapchain.rs
tearchan-gfx/src/material/: material2d.rs  material3d.rs  material_billboard.rs  material_line.rs  mod.rs
tearchan-gfx/src/shader_program/: mod.rs  quad_shader_program.rs
tearchan-gfx/src/v2/: buffer.rs
tearchan-horde/: Cargo.toml  README.md
tearchan-horde/src/: lib.rs
tearchan-horde/src/action/: context.rs  initializer.rs  manager.rs  mod.rs  result.rs
tearchan-horde/src/action/snapshots/: tearchan_horde__action__manager__test__server_cancel_immediate_false_true.snap  tearchan_horde__action__manager__test__server_cancel_immediate_multiple.snap  tearchan_horde__action__manager__test__server_cancel_immediate_true_false.snap
tearchan-horde/src/job/: manager.rs  mod.rs  result.rs
tearchan-horde/src/job/snapshots/: tearchan_horde__job__manager__test__actions.snap
tearchan-horde/src/v2/: mod.rs
tearchan-util/: Cargo.toml
tearchan-util/src/: any.rs  array_2d.rs  array_3d.rs  btree.rs  bytes.rs  compare.rs  id_manager.rs  lib.rs  macros.rs  mesh.rs  string.rs  texture.rs  time.rs
tearchan-util/src/math/: mat.rs  mod.rs  rect.rs  vec.rs
tearchan-util/src/thread/: mod.rs
tearchan_core/: Cargo.toml
tearchan_core/src/: lib.rs
tearchan_core/src/file/: file_manager.rs
tearchan_core/src/game/: game_cast_manager.rs  game_context.rs  game_object_caster.rs  game_plugin.rs  game_plugin_command.rs  game_plugin_manager.rs  game_plugin_operator.rs  mod.rs
tearchan_core/src/scene/: mod.rs  scene_context.rs  scene_factory.rs  scene_manager.rs  scene_object.rs  scene_result.rs
tearchan_core/src/ui/: mod.rs  ui_manager.rs  ui_object.rs  ui_touch.rs
tearchan_graphics/: Cargo.toml  build.rs
tearchan_graphics/shaders/: billboard.frag  billboard_alpha.frag  quad.frag  quad.vert  standard_2d.frag  standard_3d.frag  standard_3d.vert  standard_line.frag  standard_line.vert
tearchan_graphics/src/: display_size.rs  image.rs  lib.rs  screen.rs
tearchan_graphics/src/batch/: batch_buffer.rs  batch_command.rs  batch_command_queue.rs  batch_object.rs  batch_object_manager.rs  batch_pointer.rs  batch_provider.rs  mod.rs
tearchan_graphics/src/camera/: camera_2d.rs  camera_3d.rs  mod.rs
tearchan_graphics/src/hal/: backend.rs  depth_resource.rs  device_info.rs  font_texture.rs  frame_resource.rs  graphic_pipeline.rs  helper.rs  image_resource.rs  instance.rs  mod.rs  queue.rs  render_bundle.rs  render_pass.rs  renderer.rs  renderer_context.rs  surface.rs  texture.rs  viewport.rs
tearchan_graphics/src/renderer/: mod.rs  render_command.rs  render_command_executor.rs  render_command_queue.rs
tearchan_graphics/src/shader/: billboard_shader_program.rs  mod.rs  quad_shader_program.rs  standard_2d_shader_program.rs  standard_3d_shader_program.rs  standard_line_shader_program.rs
tearchan_utility/: Cargo.toml
tearchan_utility/src/: any.rs  binary.rs  btree.rs  compare.rs  id_manager.rs  lib.rs  mesh.rs  shared.rs  texture.rs  time.rs
tearchan_utility/src/math/: mod.rs  vec.rs
tearchan_utility/src/test/: mock.rs
(+267 files in other folders)
