[package]
name = "tearchan"
version = "0.0.1"
edition = "2018"

[dependencies]
# utils
derive_builder = "0.9.0"
instant = "0.1.9"
log = "0.4.11"
downcast-rs = "1.2.0"
wgpu = { path = "../wgpu-rs" }
futures = "0.3.12"
async-executor = "1.4.0"
# framework
winit = { version = "0.24.0", features = ["web-sys"] }
tearchan-core = { path = "tearchan-core" }
tearchan-gfx = { path = "tearchan-gfx" }
tearchan-util = { path = "tearchan-util" }

[workspace]
members = [
    "tearchan-core",
    "tearchan-ecs",
    "tearchan-gfx",
    "tearchan-horde",
    "tearchan-util",
    "examples",
]
