[package]
name = "examples"
version = "0.0.1"
publish = false
workspace = ".."
edition = "2018"

[[bin]]
name = "quad"
path = "quad/main.rs"

[[bin]]
name = "batch"
path = "batch/main.rs"

[[bin]]
name = "file"
path = "file/main.rs"

[[bin]]
name = "font"
path = "font/main.rs"

[dependencies]
winit = { version = "0.24.0", features = ["web-sys"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "ef2fa77536855e0b7ebdfb0df0eb879d9b7d3a1b", features = ["cross"] }
nalgebra-glm = { version = "0.13.0", features = ["serde-serialize"] }
image = "0.23.4"
bytemuck = "1.5.0"
rand = "0.8.3"
color-rs = "0.6.1"
tearchan = { path = ".." }
tearchan-core = { path = "../tearchan-core" }
tearchan-gfx = { path = "../tearchan-gfx" }
tearchan-util = { path = "../tearchan-util" }

[build-dependencies]
shaderc = "0.6.2"
tearchan-tools = { path = "../tearchan-tools" }
