[package]
name = "examples"
version = "0.0.1"
publish = false
edition = "2018"

[[bin]]
name = "empty"
path = "empty/main.rs"

[[bin]]
name = "batch2d"
path = "batch2d/main.rs"

[[bin]]
name = "batch3d"
path = "batch3d/main.rs"

[[bin]]
name = "batch_billboard"
path = "batch_billboard/main.rs"

[[bin]]
name = "batch_line"
path = "batch_line/main.rs"

[[bin]]
name = "file"
path = "file/main.rs"

[[bin]]
name = "font"
path = "font/main.rs"

[[bin]]
name = "horde"
path = "horde/main.rs"

[dependencies]
winit = { version = "0.26.1" }
nalgebra-glm = { version = "0.13.0", features = ["serde-serialize"] }
image = "0.23.4"
bytemuck = "1.5.0"
rand = "0.8.3"
color-rs = "0.6.1"
env_logger = "0.8.4"
tearchan = { path = ".." }
tearchan-ecs = { path = "../tearchan-ecs" }
tearchan-horde = { path = "../tearchan-horde" }
serde = { version = "1.0.125", features = ["rc"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
wavefront_obj = "9.0.0"
maze_generator = "2.0.0"

[build-dependencies]
shaderc = "0.6.2"
tearchan-tools = { path = "../tearchan-tools" }
