[package]
name = "tearchan-util"
version = "0.0.1"
edition = "2018"

[dependencies]
instant = "0.1.9"
serde = { version = "1.0.118", features = ["derive"] }
nalgebra-glm = { version = "0.10.0", features = ["serde-serialize"] }
wavefront_obj = "9.0.0"
texture_packer = "0.22.0"

[dev-dependencies]
float-cmp = "0.7.0"
serde_json = "1.0.61"
endianness = "0.2"
