[package]
name = "tearchan-util"
version = "0.0.1"
edition = "2018"

[dependencies]
instant = "0.1.9"
serde = { version = "1.0.118", features = ["derive"] }
nalgebra-glm = { version = "0.13.0", features = ["serde-serialize"] }
wavefront_obj = "9.0.0"
texture_packer = "0.22.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
threadpool = "1.8.1"

[dev-dependencies]
float-cmp = "0.7.0"
serde_json = "1.0.61"
endianness = "0.2"
