[package]
name = "tearchan_core"
version = "0.0.1"
edition = "2018"

[dependencies]
derive_builder = "0.9.0"
nalgebra-glm = { version = "0.7.0", features = ["serde-serialize"] }

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
