[package]
name = "tearchan_graphics"
version = "0.0.1"
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
wgl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = { version = "0.22.2", features = ["web-sys"] }
gfx-hal = { version = "0.6.0", path = "../../gfx/src/hal" }
gfx-auxil = { version = "0.5.0", path = "../../gfx/src/auxil/auxil" }
gfx-backend-empty = { version = "0.6.0", path = "../../gfx/src/backend/empty" }
nalgebra-glm = { version = "0.7.0", features = ["serde-serialize"] }
image = "0.23.4"
rusttype = "0.9.2"
tearchan_utility = { path = "../tearchan_utility" }

[dependencies.gfx-backend-gl]
path = "../../gfx/src/backend/gl"
version = "0.6.0"
optional = true

[dependencies.gfx-backend-vulkan]
path = "../../gfx/src/backend/vulkan"
version = "0.6.0"
features = ["x11"]
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
path = "../../gfx/src/backend/metal"
version = "0.6.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
path = "../../gfx/src/backend/dx11"
version = "0.6.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../gfx/src/backend/dx12"
version = "0.6.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.45"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dev-dependencies]
raw-window-handle = "0.3.3" # For dummy surface
tearchan_utility = { path = "../tearchan_utility" }

[build-dependencies]
shaderc = "0.6.2"
