[package]
name = "tearchan_utility"
version = "0.0.1"
edition = "2018"

[dependencies]
serde = { version = "1.0.111", features = ["derive", "rc"] }
nalgebra-glm = { version = "0.8.0", features = ["serde-serialize"] }
tobj = "2.0.1"
texture_packer = "0.21.1"
instant = "0.1.7"

[dev-dependencies]
float-cmp = "0.7.0"
